<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- RequisitionFragment -->
    <string name="str_title_module">Requisiciones</string>
    <string name="str_num_requisition">#%1$s</string>
    <string name="str_num_product">%1$d artículo</string>
    <string name="str_show_detail_requisition">Ver más</string>

    <string name="hint_search_requisition">Buscar Requisiciones</string>

    <!-- DrawMenu -->
    <string name="str_warehouse_rol">Almacenista</string>

    <!-- NewProductFragment -->
    <string name="str_no_image_product">Sin imagen seleccionada</string>
    <string name="str_new_product">Dar de alta producto</string>

    <string name="hint_name_product">Nombre</string>
    <string name="hint_active_substance">Sustancia activa</string>
    <string name="hint_mark">Marca</string>
    <string name="hint_laboratory">Laboratorio</string>
    <string name="hint_category">Categoría</string>
    <string name="hint_grammage">Gramaje</string>
    <string name="hint_serial_number">Número de serie</string>
    <string name="hint_expire_Date">Fecha de caducidad</string>
    <string name="hint_quantity">Cantidad</string>
    <string name="hint_lote">Lote</string>
    <string name="hint_sell_Cost">Costo venta</string>
    <string name="hint_use">Usos</string>
    <string name="hint_detail">Detalle</string>
    <string name="hint_recommendation">Recomendaciones</string>

    <string name="desc_image_selected">Agregar imagen del producto</string>


    <!-- FilterRequisitionDialogFragment -->
    <string name="str_title_filter">Filtrar por:</string>
    <string name="str_clear_filter">Limpiar filtros</string>
    <string name="str_title_filter_status">Estatus</string>
    <string name="str_status_one">Surtimiento</string>
    <string name="str_status_two">En camino</string>
    <string name="str_status_three">Entregado</string>
    <string name="str_status_four">Cancelación parcial</string>
    <string name="str_status_five">Cancelación total</string>
    <string name="str_status_six">Revisión cancelación</string>
    <string name="str_save_filter">Guardar filtros</string>

    <string name="msg_clear_filter">¿Estas seguro de limpiar los filtros?</string>

    <string name="hint_date_filter">Fecha</string>

</resources>