<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/dimen_twelve"
    android:paddingTop="@dimen/txt_seventeen"
    android:paddingEnd="@dimen/dimen_nineteen"
    android:paddingBottom="@dimen/txt_sixteen"
    tools:context=".ui.view.dialog.requisition.FilterRequisitionDialogFragment">

    <TextView
        android:id="@+id/tvTitleFilter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bevietnampro_bold"
        android:text="@string/str_title_filter"
        android:textColor="@color/black"
        android:textSize="@dimen/txt_sixteen"
        app:layout_constraintBottom_toBottomOf="@id/btnClearFilter"
        app:layout_constraintEnd_toStartOf="@id/btnClearFilter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnClearFilter" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnClearFilter"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bevietnampro_bold"
        android:text="@string/str_clear_filter"
        android:textSize="@dimen/txt_twelve"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDateFilter"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_twenty_four"
        android:layout_marginTop="@dimen/dimen_twenty_four"
        android:layout_marginEnd="@dimen/dimen_twenty_four"
        android:background="@color/white"
        android:hint="@string/hint_date_filter"
        app:boxCornerRadiusBottomEnd="@dimen/dimen_twenty_four"
        app:boxCornerRadiusBottomStart="@dimen/dimen_twenty_four"
        app:boxCornerRadiusTopEnd="@dimen/dimen_twenty_four"
        app:boxCornerRadiusTopStart="@dimen/dimen_twenty_four"
        app:boxStrokeColor="@color/color_blue_controls"
        app:boxStrokeWidth="@dimen/dimen_two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnClearFilter"
        app:startIconDrawable="@drawable/calendar_filter"
        app:startIconTint="@color/color_blue_controls">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDateFilter"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionDone"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="date"
            android:clickable="false"
            android:cursorVisible="false"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/tvTitleStatus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_twenty_four"
        android:fontFamily="@font/bevietnampro_regular"
        android:text="@string/str_title_filter_status"
        android:textSize="@dimen/txt_twelve"
        app:layout_constraintEnd_toEndOf="@id/tvTitleFilter"
        app:layout_constraintStart_toStartOf="@id/tvTitleFilter"
        app:layout_constraintTop_toBottomOf="@id/tilDateFilter" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chpStatusSupply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_ten"
        android:checkable="true"
        android:fontFamily="@font/bevietnampro_bold"
        android:minHeight="@dimen/dimen_forty_eight"
        android:text="@string/str_status_one"
        android:textColor="@color/blue_primary"
        android:textSize="@dimen/txt_sixteen"
        app:checkedIcon="@drawable/ic_check"
        app:checkedIconTint="@color/color_blue_controls"
        app:chipBackgroundColor="@color/white"
        app:chipStrokeColor="@color/color_blue_controls"
        app:chipStrokeWidth="@dimen/dimen_two"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitleStatus"
        tools:ignore="TextContrastCheck" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chpStatusRoute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_twelve"
        android:checkable="true"
        android:fontFamily="@font/bevietnampro_bold"
        android:minHeight="@dimen/dimen_forty_eight"
        android:text="@string/str_status_two"
        android:textColor="@color/blue_primary"
        android:textSize="@dimen/txt_sixteen"
        app:checkedIcon="@drawable/ic_check"
        app:checkedIconTint="@color/color_blue_controls"
        app:chipBackgroundColor="@color/white"
        app:chipStrokeColor="@color/color_blue_controls"
        app:chipStrokeWidth="@dimen/dimen_two"
        app:layout_constraintBottom_toBottomOf="@id/chpStatusSupply"
        app:layout_constraintEnd_toStartOf="@id/chpStatusDelivered"
        app:layout_constraintStart_toEndOf="@id/chpStatusSupply"
        app:layout_constraintTop_toTopOf="@id/chpStatusSupply"
        tools:ignore="TextContrastCheck" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chpStatusDelivered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_twelve"
        android:checkable="true"
        android:fontFamily="@font/bevietnampro_bold"
        android:minHeight="@dimen/dimen_forty_eight"
        android:text="@string/str_status_three"
        android:textColor="@color/blue_primary"
        android:textSize="@dimen/txt_sixteen"
        app:checkedIcon="@drawable/ic_check"
        app:checkedIconTint="@color/color_blue_controls"
        app:chipBackgroundColor="@color/white"
        app:chipStrokeColor="@color/color_blue_controls"
        app:chipStrokeWidth="@dimen/dimen_two"
        app:layout_constraintBottom_toBottomOf="@id/chpStatusRoute"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/chpStatusRoute"
        tools:ignore="TextContrastCheck" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chpStatusPartialCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_twelve"
        android:checkable="true"
        android:fontFamily="@font/bevietnampro_bold"
        android:minHeight="@dimen/dimen_forty_eight"
        android:text="@string/str_status_four"
        android:textColor="@color/blue_primary"
        android:textSize="@dimen/txt_sixteen"
        app:checkedIcon="@drawable/ic_check"
        app:checkedIconTint="@color/color_blue_controls"
        app:chipBackgroundColor="@color/white"
        app:chipStrokeColor="@color/color_blue_controls"
        app:chipStrokeWidth="@dimen/dimen_two"
        app:layout_constraintStart_toStartOf="@id/chpStatusSupply"
        app:layout_constraintTop_toBottomOf="@id/chpStatusSupply"
        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chpStatusTotalCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_twelve"
        android:checkable="true"
        android:fontFamily="@font/bevietnampro_bold"
        android:minHeight="@dimen/dimen_forty_eight"
        android:text="@string/str_status_five"
        android:textColor="@color/blue_primary"
        android:textSize="@dimen/txt_sixteen"
        app:checkedIcon="@drawable/ic_check"
        app:checkedIconTint="@color/color_blue_controls"
        app:chipBackgroundColor="@color/white"
        app:chipStrokeColor="@color/color_blue_controls"
        app:chipStrokeWidth="@dimen/dimen_two"
        app:layout_constraintBottom_toBottomOf="@id/chpStatusPartialCancel"
        app:layout_constraintEnd_toEndOf="@id/chpStatusDelivered"
        app:layout_constraintTop_toTopOf="@id/chpStatusPartialCancel"
        tools:ignore="TextContrastCheck" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chpStatusInReview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_twelve"
        android:checkable="true"
        android:fontFamily="@font/bevietnampro_bold"
        android:minHeight="@dimen/dimen_forty_eight"
        android:text="@string/str_status_six"
        android:textColor="@color/blue_primary"
        android:textSize="@dimen/txt_sixteen"
        app:checkedIcon="@drawable/ic_check"
        app:checkedIconTint="@color/color_blue_controls"
        app:chipBackgroundColor="@color/white"
        app:chipStrokeColor="@color/color_blue_controls"
        app:chipStrokeWidth="@dimen/dimen_two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chpStatusPartialCancel"
        tools:ignore="TextContrastCheck" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSaveFilter"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_twenty_four"
        android:layout_marginTop="@dimen/dimen_thirty_three"
        android:layout_marginEnd="@dimen/dimen_twenty_four"
        android:layout_marginBottom="@dimen/dimen_thirty_three"
        android:fontFamily="@font/bevietnampro_bold"
        android:padding="@dimen/dimen_fifteen"
        android:text="@string/str_save_filter"
        android:textAllCaps="false"
        android:textSize="@dimen/txt_seventeen"
        app:cornerRadius="@dimen/dimen_thirty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chpStatusInReview" />

</androidx.constraintlayout.widget.ConstraintLayout>